test/libyul/yulSyntaxTests/switch_statement_no_access.yul
{
    switch 42
}
// ----
// ParserError 2418: (16-17): Switch statement without any cases.
